--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promoplay - Apresentação</title>
-    <link rel="stylesheet" href="apresentacao.css">
-    <script src="apresentacao.js" defer></script>
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js" defer></script>
     <link rel="icon" type="image/png" href=https://i.postimg.cc/3NNfpt6c/pixel-arte-jogos-moeda-moeda-removebg-preview.png">
 </head>
 <body>
@@ -96,3 +96,4 @@
 </body>
 
 </html>
+
