--- a/home.html
+++ b/home.html
@@ -11,9 +11,11 @@
 <body>
   <header>
     <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="25px"></h1>
+    
     <div class="perfil">
-      <span>Perfil</span>
+      <span id="userEmailDisplay">Perfil</span>
       <div class="perfil-img"></div>
+      <button id="btnLogout" class="btn-sair">Sair</button>
     </div>
   </header>
 
