--- a/cadastro.html
+++ b/cadastro.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="cadastro.css">
   <script type="module" src="cadastro.js"></script>
-  <title>Login</title>
+  <link rel="icon" type="image/png" href=https://i.postimg.cc/3NNfpt6c/pixel-arte-jogos-moeda-moeda-removebg-preview.png">
+  <title>Cadastro</title>
 </head>
 <body>
-  
   <header>
     <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="21px"></h1>
     <nav>
@@ -35,9 +35,11 @@
 
     <button type="submit">Cadastrar</button>
   </div>
-  
-  <footer>
-    <div>Dados por <a href="https://www.cheapshark.com/">Cheapshark</a>. Para mais informações, entre em contato com promoplay@gmail.com</div>
-  </footer>
+    <footer class="footer">
+        <p>&copy; 2025 Promoplay. Todos os direitos reservados.</p>
+        <p class="footer-credit">
+            <div>Dados fornecidos por <a href="https://www.cheapshark.com/">Cheapshark</a>. Para mais informações, entre em contato com promoplay@gmail.com</div>
+        </p>
+    </footer>
 </body>
 
