--- a/login.html
+++ b/login.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="login.css">
   <script type="module" src="login.js"></script>
+  <link rel="icon" type="image/png" href=https://i.postimg.cc/3NNfpt6c/pixel-arte-jogos-moeda-moeda-removebg-preview.png">
   <title>Login</title>
 </head>
 <body>
-
   <header>
-    <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="21px"></h1>
+    <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="21px"></h1><a href="index.html"></a>
     <nav>
       <a href="login.html">Login</a>
       <a href="cadastro.html">Cadastrar-se</a>
@@ -27,19 +27,17 @@
 
       <label for="senha">Senha</label><br>
       <input type="password" id="senha" placeholder="Insira a sua senha" required>
-
+      <p>Esqueceu a senha? <a href="resetsenha.html">Redefina aqui</a></p>
       <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se aqui</a></p>
 
       <button type="submit">Entrar</button>
     </form>
   </div>
-  
-  <footer>
-    <div>Dados por <a href="https://www.cheapshark.com/">Cheapshark</a>. Para mais informações, entre em contato com promoplay@gmail.com</div>
-  </footer>
-
-  <!-- IMPORTA O ARQUIVO JS -->
-  
-
+    <footer class="footer">
+        <p>&copy; 2025 Promoplay. Todos os direitos reservados.</p>
+        <p class="footer-credit">
+            <div>Dados fornecidos por <a href="https://www.cheapshark.com/">Cheapshark</a>. Para mais informações, entre em contato com promoplay@gmail.com</div>
+        </p>
+    </footer>
 </body>
 </html>
