--- a/home.html
+++ b/home.html
@@ -10,15 +10,13 @@
 </head>
 <body>
   <header>
-    <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="25px"></h1>
-    
+    <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="21px"></h1><a href="home.html"></a>
     <div class="perfil">
       <span id="userEmailDisplay">Perfil</span>
       <div class="perfil-img"></div>
       <button id="btnLogout" class="btn-sair">Sair</button>
     </div>
   </header>
-
   <main class="container">
     <div class="search-box">
       <div class="search-bar">
@@ -34,12 +32,11 @@
       <div id="loadMoreContainer" style="text-align:center; margin-top:20px;"></div>
     </div>
   </main>
-
-  <footer>
-    Dados por <a href="https://www.cheapshark.com/">CheapShark</a>.  
-    Para mais informações, entre em contato com promoplay@gmail.com
-  </footer>
-
-  <script type="module" src="home.js"></script>
+    <footer class="footer">
+        <p>&copy; 2025 Promoplay. Todos os direitos reservados.</p>
+        <p class="footer-credit">
+            <div>Dados fornecidos por <a href="https://www.cheapshark.com/">Cheapshark</a>. Para mais informações, entre em contato com promoplay@gmail.com</div>
+        </p>
+    </footer>ype="module" src="home.js"></script>
 </body>
 </html>
