--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="container header">
-        <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="21px"></h1>
+        <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="21px"></h1><a href="index.html"></a>
         <nav>
             <a href="#" class="nav-button">Fazer login</a>
         </nav>
@@ -39,7 +39,7 @@
                     Criar minha conta
                 </a>
                 <a href="#" class="action-button secondary">
-                    Entrar (Já tenho conta)
+                    Entrar na minha conta
                 </a>
             </div>
         </section>
@@ -89,11 +89,9 @@
     <footer class="footer">
         <p>&copy; 2025 Promoplay. Todos os direitos reservados.</p>
         <p class="footer-credit">
-            Dados de ofertas fornecidos pela 
-            <a href="https://apidocs.cheapshark.com/" target="_blank" class="footer-link">API do Cheapshark</a>.
+            <div>Dados fornecidos por <a href="https://www.cheapshark.com/">Cheapshark</a>. Para mais informações, entre em contato com promoplay@gmail.com</div>
         </p>
     </footer>
 </body>
-
 </html>
 
