--- a/home.html
+++ b/home.html
@@ -10,13 +10,15 @@
 </head>
 <body>
   <header>
-    <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="21px"></h1><a href="home.html"></a>
+    <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="25px"></h1>
+    
     <div class="perfil">
       <span id="userEmailDisplay">Perfil</span>
-      <div class="perfil-img"></div>
       <button id="btnLogout" class="btn-sair">Sair</button>
+      <div class="perfil-img"></div>
     </div>
   </header>
+
   <main class="container">
     <div class="search-box">
       <div class="search-bar">
@@ -32,11 +34,12 @@
       <div id="loadMoreContainer" style="text-align:center; margin-top:20px;"></div>
     </div>
   </main>
-    <footer class="footer">
-        <p>&copy; 2025 Promoplay. Todos os direitos reservados.</p>
-        <p class="footer-credit">
-            <div>Dados fornecidos por <a href="https://www.cheapshark.com/">Cheapshark</a>. Para mais informações, entre em contato com promoplay@gmail.com</div>
-        </p>
-    </footer>ype="module" src="home.js"></script>
+
+  <footer>
+    Dados por <a href="https://www.cheapshark.com/">CheapShark</a>.  
+    Para mais informações, entre em contato com promoplay@gmail.com
+  </footer>
+
+  <script type="module" src="home.js"></script>
 </body>
 </html>
