--- a/resetsenha.html
+++ b/resetsenha.html
@@ -12,8 +12,8 @@
     <header>
         <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="25px"></h1>
         <nav>
-            <a href="#">Entrar</a>
-            <a href="#">Cadastrar</a>
+            <a href="login.html">Entrar</a>
+            <a href="cadastro.html">Cadastrar</a>
         </nav>
     </header>
 
