--- a/resetsenha.html
+++ b/resetsenha.html
@@ -12,8 +12,8 @@
     <header>
         <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="25px"></h1>
         <nav>
-            <a href="login.html">Entrar</a>
-            <a href="cadastro.html">Cadastrar</a>
+            <a href="#">Entrar</a>
+            <a href="#">Cadastrar</a>
         </nav>
     </header>
 
@@ -37,6 +37,6 @@
     Para mais informações, entre em contato com promoplay@gmail.com
   </footer>
 
-    <script src="resetsenha.js" defer></script>
+    <script src="resetsenha.js" type="module" defer></script>
 </body>
 </html>
