--- a/resetsenha.html
+++ b/resetsenha.html
@@ -37,6 +37,9 @@
     Para mais informações, entre em contato com promoplay@gmail.com
   </footer>
 
-    <script src="resetsenha.js" type="module" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+    
+    <script src="resetsenha.js" defer></script>
 </body>
 </html>
