--- a/home.html
+++ b/home.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Promoplay</title>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="home.css">
-  <link rel="icon" type="image/png" href="https://i.postimg.cc/3NNfpt6c/pixel-arte-jogos-moeda-moeda-removebg-preview.png">
+  <link rel="icon" type="image/png"
+    href="https://i.postimg.cc/3NNfpt6c/pixel-arte-jogos-moeda-moeda-removebg-preview.png">
 </head>
+
 <body>
   <header>
     <h1>Promoplay <img src="https://i.postimg.cc/KvqKdbyP/image.png" alt="coin" id="coin" height="25px"></h1>
-    
     <div class="perfil">
       <span id="userEmailDisplay">Perfil</span>
       <button id="btnLogout" class="btn-sair">Sair</button>
-      <div class="perfil-img"></div>
+      <a href="profile.html">
+        <div class="perfil-img"></div>
+      </a>
     </div>
   </header>
 
@@ -36,10 +40,11 @@
   </main>
 
   <footer>
-    Dados por <a href="https://www.cheapshark.com/">CheapShark</a>.  
+    Dados por <a href="https://www.cheapshark.com/">CheapShark</a>.
     Para mais informações, entre em contato com promoplay@gmail.com
   </footer>
 
   <script type="module" src="home.js"></script>
 </body>
+
 </html>
