--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
       <span id="userEmailDisplay">Perfil</span>
       <button id="btnLogout" class="btn-sair">Sair</button>
       <a href="profile.html">
-        <div class="perfil-img"></div>
+        <div class="perfil-img" id="userProfileImageContainer"></div>
       </a>
     </div>
   </header>
